ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v7/inventory.json.sha512
14fcbd8442e926a88008c2b802701a00595f12c2bbe10104db68a329880c88ea6d7dcea945d97ec882221e98bd84ed5d89ad79586e776efd17b91ca89e821276  inventory.json
